@@ -93,3 +93,4 @@
 20231024 ./watchlist/c/ver-m.sh added.
 20231024 ./watchlist/c/counts.sh added.
 20231024 ./watchlist/c/walk2c.sh added.
+20231024 ./watchlist/c/v.sh added.
